Fix issues where background wasn't covering entire page on mobile landscape orientation.

--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,6 @@ body,
 }
 
 .App {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   width: 100vw;
 }
