--- a/src/components/survey/emoticon/Emoticon.module.css
+++ b/src/components/survey/emoticon/Emoticon.module.css
@@ -2,7 +2,13 @@
   display: flex;
   height: 5rem;
   justify-content: center;
-  padding: 0 10vw 10vh 10vw;
+  padding: 0 10vw 8vh 10vw;
+}
+
+@media only screen and (max-height: 450px) and (orientation: landscape) {
+  .face {
+    display: none;
+  }
 }
 
 .eye {
